# gitaai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  railway.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
data/processed/: chapters.json  translations.json  verses.json
data/seed/: concept_relationships.json  concept_verse_map.json  concepts.json  person_concept_map.json  persons.json
docs/: ARCHITECTURE.md  LEARNINGS.md
scripts/: fetch_gita_data.py
services/pipeline/: Dockerfile  pyproject.toml
services/pipeline/src/: config.py
services/pipeline/src/api/: chat.py  main.py
services/pipeline/src/graph/: traversal.py
services/pipeline/src/ingest/: load_verses.py  seed_graph.py
services/pipeline/src/retrieval/: vector_search.py
services/pipeline/tests/: test_concept_matching.py
