[project]
name = "gitaai-pipeline"
version = "0.1.0"
description = "RAG + Knowledge Graph pipeline for GitaAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "anthropic[bedrock]>=0.52.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "neo4j>=5.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
